--- a/TicketReservation System/Reservation System/ClientApp/src/components/forms.css
+++ b/TicketReservation System/Reservation System/ClientApp/src/components/forms.css
@@ -26,6 +26,7 @@
 
 .orderBtn {
   margin: 15px;
+  min-width: 100px;
 }
 
 .orderTable {
@@ -50,4 +51,21 @@
 
 .orderStatusTable {
   margin-bottom: 20%;
+}
+
+.error-text {
+  color: red;
+  font-size: 0.8em;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
